docker file fix

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<!-- <finalName>spring-aks-test.jar</finalName> -->
+		<finalName>spring-aks-test.jar</finalName>
 	</build>
 
 </project>
